--- a/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.html
+++ b/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
